# timetableScheduler

./: CMakeLists.txt  README.md  course.cpp  course.hpp  instructor.cpp  instructor.hpp  main.cpp  read.me  test_7  test_8  timeSlot.cpp  timeSlot.hpp  university.cpp  university.hpp
tests/: test_1  test_2  test_3  test_4  test_5  test_6  test_9
